--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="me.png" alt="AKINOSI FADESHOLA" class="profile-pic">
+        <img src="me.jpg" alt="AKINOSI FADESHOLA" class="profile-pic">
         <h1>AKINOSI FADESHOLA</h1>
         <p>CS Student | QA Tester at uTest</p>
 
